--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gulp-imagemin": "^6.2.0",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.1.1",
+    "json-server": "^0.17.0",
     "sass": "^1.43.4"
   },
   "browserslist": [
